banner section and donate today section responsive done

--- a/style/laptop-responsive-style.css
+++ b/style/laptop-responsive-style.css
@@ -1,3 +1,9 @@
+
+@media screen and (min-width:1024px) and (max-width:1440px) {
+    .donate-today-text .amount{
+        margin: 0px 340px;
+    }
+}
 @media screen and (min-width:993px) and (max-width:1024px) {
     /* donate-today-responsive-Start */
     .donate-today-text .amount{
