servive section done

--- a/style/laptop-responsive-style.css
+++ b/style/laptop-responsive-style.css
@@ -6,6 +6,9 @@
     .depend-container {
         margin-left: 180px;
     }
+    .servive-container{
+        margin-left: 180px;
+    }
 }
 @media screen and (min-width:993px) and (max-width:1024px) {
     /* donate-today-responsive-Start */
@@ -18,4 +21,7 @@
         margin-left: 125px;
      }
      /* depend-responsive-End */
+     .servive-container{
+        margin-left: 125px;
+     }
 }
