--- a/style/main-style.css
+++ b/style/main-style.css
@@ -228,7 +228,6 @@ text-align: left;
 /* depend-section-Start */
 .depend-container{
     width: 68%;
-    height: 400px;
     margin-left: 190px;
     margin-top: 110px;
 }
@@ -282,3 +281,59 @@ margin-bottom: 20px;
 
 }
 /* depend-section-End */
+
+/* servive-section Start */
+.servive-container{
+    width: 68%;
+    margin-left: 190px;
+    margin-top: 110px;
+}
+.servive-area{
+    display: flex;
+    align-items: center;
+    gap: 90px;
+}
+.servive-img-area{
+    width: 50%;
+    height: 450px;
+}
+.servive-img-area img{
+    width: 100%;
+    height: 100%;
+}
+.servive-text-area{
+    width: 50%;
+}
+.servive-text-area h2{
+color: var(--secondary-color);
+font-family: Inter;
+font-size: 2.8125rem;
+font-weight: 700;
+text-align: left;
+margin-bottom: 20px;
+}
+.servive-text-area p{
+color: var(--third-color);
+font-family: Poppins;
+font-size: 1.125rem;
+font-weight: 400;
+line-height: 28px;
+text-align: left;
+margin-bottom: 30px;
+}
+.servive-text-area button{
+    background-color: var(--btn-bc-color);
+    border: none;
+    font-family: Inter;
+    text-align: left;
+    padding: 16px 20px ;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+.servive-text-area button a{
+    color: var(--primary-color);
+    text-decoration: none;
+    font-size:1.25rem;
+    font-weight: 600;
+}
+/* servive-section End */
