--- a/style/mobile-responsive-style.css
+++ b/style/mobile-responsive-style.css
@@ -66,9 +66,6 @@ gap: 50px;
 .depend-img-area, .depend-text-area{
     width: 100%;
 }
-.depend-text-area{
-    padding: 0 10px;
-}
 .depend-text-area h2{
     font-size: 2.8rem;
 }
@@ -76,4 +73,24 @@ gap: 50px;
     font-size: 0.9rem;
 }
     /* depend-responsive-End */
+    /* servive-section responsive Start */
+    .servive-container{
+        margin-left: 0;
+        width: 100%;
+        margin-top:85px;
+    }
+    .servive-area{
+     flex-direction: column;
+     gap: 50px;
+    }
+    .servive-text-area h2{
+        font-size: 2.8rem;
+    }
+    .servive-text-area p{
+        font-size: 0.9rem;
+    }
+    .servive-img-area, .servive-text-area{
+     width: 100%;
+    }
+    /* servive-section responsive End */
 }
