--- a/style/mobile-responsive-style.css
+++ b/style/mobile-responsive-style.css
@@ -93,4 +93,36 @@ gap: 50px;
      width: 100%;
     }
     /* servive-section responsive End */
+    /* update-section-responsive-Start */
+.update-area{
+    margin-top:85px;
+}
+.update-input-area{
+    flex-direction: column;
+}
+.update-text-area{
+    max-width: 100%;
+}
+.update-input-area{
+    width: 100%;
+    padding: 50px 0;
+}
+.update-text-area h2{
+    font-size: 2.8rem;
+}
+.update-text-area p{
+    font-size: 0.9rem;
+}
+.update-input-area input[type="email"]{
+    max-width: 90%;
+    margin-bottom: 15px;
+    border-radius:5px
+}
+.update-input-area button {
+    display: block;
+   width: 100%;
+   max-width: 90%;
+   border-radius:5px
+}
+    /* update-section-responsive-End */
 }
