--- a/style/main-style.css
+++ b/style/main-style.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Manrope:wght@200..800&display=swap');
+
 
 *{
     margin: 0;
@@ -406,3 +408,30 @@ text-align: center;
     cursor: pointer;
 }
 /* update-section-End */
+/* footer-section-Start */
+.footer-container{
+    width: 100%;
+    height: 177px;
+    background: rgb(11, 13, 23);
+    margin-top: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-area h2{
+color: var(--btn-bc-color);
+font-family: Lobster;
+font-size: 2.25rem;
+font-weight: 400;
+margin-bottom: 24px;
+text-align: center;
+}
+.footer-area p{
+    color: rgb(217, 219, 225);
+font-family: Manrope;
+font-size:0.875rem;
+font-weight: 400;
+text-align: center;
+}
+
+/* footer-section-End */
